Fixed sizes on meet up section

--- a/about.html
+++ b/about.html
@@ -42,14 +42,21 @@
                     Discover more about the worshops and see what fits your needs and what calls your heart.
             </p>
             <div class="skills">
-                <button><a href="#workshop1">The Work That Reconnects</a></button>
-                <button><a href="#workshop2">CLimate Circles</a></button>
-                <button><a href="#workshop3">Forest Bathing</a></button>
+                <form action="#workshop1" method="get">
+                    <button>The Work That Reconnects</button>
+                </form>
+                <form action="#workshop1" method="get">
+                    <button>CLimate Circles</button>
+                </form>
+                <form action="#workshop1" method="get">
+                    <button>Forest Bathing</button>
+                </form>
             </div>
             </div>
-    </section>
+            </div>
+        </section>
     <section id="workshop1">
-        <div id="wks-image">
+        <div class="wks-image">
             <h2 class="wks-title">The Work That<br>Reconnects</h2>
             <div class="wks-container">
             <h3 class="description-titles">About</h3>
@@ -73,7 +80,7 @@
        
     </section>
     <section id="workshop2">
-        <div id="wks-image2">
+        <div class="wks-image2">
             <h2 class="wks-title">Climate Circles</h2>
         <div class="wks-container2">
             <h3 class="description-titles">About</h3>
@@ -94,7 +101,7 @@
         </div>
     </section>
     <section id="workshop3">
-        <div id="wks-image">
+        <div class="wks-image">
             <h2 class="wks-title">Forest Bathing</h2>
         <div class="wks-container">
             <h3 class="description-titles">About</h3>
