--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
             <div id="meet-up-img">
            <img src="assets/images/girl-hugging-tree.jpg" alt="Girl hugging tree" class="animate">
             <img src="assets/images/hands-plant.jpg" alt="Hands through plants" class="animate">
-            <img class="forest" src="assets/images/forest3.jpg" alt="Small waterfall in the forest" class="animate">
+            <img src="assets/images/forest3.jpg" alt="Small waterfall in the forest" class="animate">
             </div>
             <div id="meet-up-text">
             <div id="meet-up-reconnect">
                 <h2>The Work</h2>
                 <h2>That Reconnects</h2>
                 <h3>When: Tuesday 18:00</h3>
-                <h3>Location: The Legacy Bucharest</h3>
+                <h3>Location:<br> The Legacy Bucharest</h3>
             </div>
             <div id="meet-up-climate">
                 <h2>Climate Circles</h2>
