--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <div id="header">
         <a href="index.html">
                <div id="logo">
-                <img src="assets/images/logo1.png" alt="Climate Circles logo">
+                <img src="assets/images/logo.webp" alt="Climate Circles logo">
                </div>
         </a>
         <nav>
@@ -56,7 +56,7 @@
             </div>
         </section>
     <section id="workshop1">
-        <div class="wks-image">
+        <div class="wks-image1">
             <h2 class="wks-title">The Work That<br>Reconnects</h2>
             <div class="wks-container">
             <h3 class="description-titles">About</h3>
@@ -101,7 +101,7 @@
         </div>
     </section>
     <section id="workshop3">
-        <div class="wks-image">
+        <div class="wks-image3">
             <h2 class="wks-title">Forest Bathing</h2>
         <div class="wks-container">
             <h3 class="description-titles">About</h3>
