--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <div id="header">
         <a href="index.html">
                <div id="logo">
-                <img src="assets/images/logo1.png" alt="Climate Circles logo">
+                <img src="assets/images/logo.webp" alt="Climate Circles logo">
                </div>
         </a>
         <nav>
