--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CLimate Circles for people in Bucharest, Romania">
     <meta name="keywords" content="climate, circles, bucharest, romania">
+    <meta name="theme color" content="#024500">
     
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Climate Circles</title>
@@ -37,8 +38,9 @@
         <div id="hero-image">
         <div id="cover-text">
             <h3>“Knowing that you love the earth changes you, activates you to defend and protect and celebrate. But when you feel that the earth loves you
-                 in return, that feeling transforms the relationship from a one-way street into a sacred bond.” ― Robin Wall Kimmerer, Bradining Sweetgrass</h3>
-        </div>
+                 in return, that feeling transforms the relationship from a one-way street into a sacred bond.”</h3>
+                 <p class="center">Robin Wall Kimmerer,</p>
+                    <p class="float-right">Bradining Sweetgrass</p>
     </div>
     </section>
     <section id="bio">
