Add comments to html

--- a/about.html
+++ b/about.html
@@ -13,11 +13,13 @@
 <body>
     <header>
         <div id="header">
+        <!-- logo -->    
         <a href="index.html">
                <div id="logo">
                 <img src="assets/images/logo.webp" alt="Climate Circles logo">
                </div>
         </a>
+        <!-- navigation links -->
         <nav>
             <ul id="menu">
                 <li>
@@ -33,6 +35,8 @@
         </nav>
         </div>  
     </header>
+
+    <!-- hero-image section -->
     <section id="about-workshops">
             <div id="background-image">
             <div id="inner-container" class="box">
@@ -45,16 +49,18 @@
                 <form action="#workshop1" method="get">
                     <button>The Work That Reconnects</button>
                 </form>
-                <form action="#workshop1" method="get">
+                <form action="#workshop2" method="get">
                     <button>CLimate Circles</button>
                 </form>
-                <form action="#workshop1" method="get">
+                <form action="#workshop3" method="get">
                     <button>Forest Bathing</button>
                 </form>
             </div>
             </div>
             </div>
         </section>
+
+    <!-- first workshop section-->    
     <section id="workshop1">
         <div class="wks-image1">
             <h2 class="wks-title">The Work That<br>Reconnects</h2>
@@ -77,8 +83,9 @@
             </ul>
         </div>
         </div>
-       
     </section>
+
+    <!-- second workshop section-->
     <section id="workshop2">
         <div class="wks-image2">
             <h2 class="wks-title">Climate Circles</h2>
@@ -100,6 +107,8 @@
         </div>
         </div>
     </section>
+
+    <!-- third workshop section -->
     <section id="workshop3">
         <div class="wks-image3">
             <h2 class="wks-title">Forest Bathing</h2>
@@ -124,6 +133,8 @@
         </div>
         </div>
     </section>
+
+    <!-- footer -->
     <footer>
         <div class="footer-container">
             <div class="left-col">
