--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,13 @@
 <body>
     <header>
         <div id="header">
+        <!-- logo -->
         <a href="index.html">
                <div id="logo">
                 <img src="assets/images/logo.webp" alt="Climate Circles logo">
                </div>
         </a>
+        <!-- navigation links -->
         <nav>
             <ul id="menu">
                 <li>
@@ -33,6 +35,8 @@
         </nav>
     </div>
     </header>
+
+    <!--contact form -->
     <section class="form-section">
         <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
             <h2>Let's get in touch!</h2>
@@ -52,6 +56,8 @@
             <input class="join-button" type="submit" value="Submit">
         </form>
    </section>
+
+   <!-- footer -->
     <footer>
         <div class="footer-container">
             <div class="left-col">
