--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         </nav>
     </div>
     </header>
+
+    <!-- hero image section -->
     <section id="hero-outer">
         <div id="hero-image">
         <div id="cover-text">
@@ -43,6 +45,8 @@
                     <p class="float-right">Bradining Sweetgrass</p>
     </div>
     </section>
+
+    <!-- Biography section -->
     <section id="bio">
         <hr>
         <h2 class="meet">Meet Alexandra</h2>
@@ -59,6 +63,8 @@
            </div>
         </div>
     </section>
+
+    <!-- testimonials section -->
     <section id="testimonials">
         <hr>
         <h2 class="meet">Testimonials</h2>
@@ -79,6 +85,8 @@
         
         </div>
     </section>
+
+   <!-- meet-up section -->
     <section id="meet-up">
               <hr>
         <h2 class="meet">Meet-up Times</h2>
@@ -108,8 +116,9 @@
             </div>
             </div>
         </div>
-
     </section>
+
+    <!-- footer -->
     <footer>
         <div class="footer-container">
             <div class="left-col">
