Corrected grammar and added Testing section in the readme.md file

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                  <p class="center">Robin Wall Kimmerer,</p>
                     <p class="float-right">Bradining Sweetgrass</p>
     </div>
+    </div>
     </section>
 
     <!-- Biography section -->
