Corrected grammar in readme.md file and added forking

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
               <hr>
         <div id="bio-container">
         <div id="right-bio">
-             <p>Alexandra Brinzac is a being that journeys through life with an open heart and a deep love for all that is moving. Her background is a BA in psychology, with 
-                  a master degree in experiential psychotherapy. During her last 4 years, her journey was paved with linking psychology and ecopsychology together. Therefore,
-                  you can find her hosting climate circles, deep ecology and The Work That Reconnects workshops and gathering people for forest bathing sessions.
+             <p>
+                Alexandra Brinzac is a being that journeys through life with an open heart and a deep love for all that is moving. Her background is a BA in
+                 psychology, with a master's degree in experiential psychotherapy. During her last 4 years, her journey was paved with linking psychology and
+                 ecopsychology together. Therefore, you can find her hosting climate circles, deep ecology and The Work That Reconnects workshops, and gathering
+                 people for forest bathing sessions.
              </p>
         </div>
             <div id="left-bio">
