--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="climate, circles, bucharest, romania">
     
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Climate Circles</title>
+    <title>Climate Circles | About</title>
 </head>
 <body>
     <header>
@@ -46,15 +46,9 @@
                     Discover more about the worshops and see what fits your needs and what calls your heart.
             </p>
             <div class="skills">
-                <form action="#workshop1" method="get">
-                    <button>The Work That Reconnects</button>
-                </form>
-                <form action="#workshop2" method="get">
-                    <button>CLimate Circles</button>
-                </form>
-                <form action="#workshop3" method="get">
-                    <button>Forest Bathing</button>
-                </form>
+                    <a class="button" href="#workshop1">The Work That Reconnects</a>
+                    <a class="button" href="workshop2">CLimate Circles</a>
+                    <a class="button" href="workshop3">Forest Bathing</a>
             </div>
             </div>
             </div>
@@ -138,12 +132,12 @@
     <footer>
         <div class="footer-container">
             <div class="left-col">
-                <h4>Contact Info</h4>
+                <h2>Contact Info</h2>
                 <p>Email: alexandra.br@gmail.com</p>
                 <p>Telephone: 07432134322</p>
             </div> 
             <div class="right-col">
-                <h4>See more of her work on:</h4>
+                <h2>See more of her work on:</h2>
                 <div class="social-links">
                     <a href="https://instagram.com" target="_blank" rel="noopener"
                       aria-label="Connect with her on Instagram"><i class="fa-brands fa-instagram"></i></a>
