--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="climate, circles, bucharest, romania">
     
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Climate Circles</title>
+    <title>Climate Circles | Contact</title>
 </head>
 <body>
     <header>
@@ -39,7 +39,7 @@
     <!--contact form -->
     <section class="form-section">
         <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
-            <h2>Let's get in touch!</h2>
+            <h1>Let's get in touch!</h1>
             
             <label for="fname">First Name</label>
             <input id="fname" name="first_name" type="text" class="text-input" required>
@@ -61,12 +61,12 @@
     <footer>
         <div class="footer-container">
             <div class="left-col">
-                <h4>Contact Info</h4>
+                <h2>Contact Info</h2>
                 <p>Email: alexandra.br@gmail.com</p>
                 <p>Telephone: 07432134322</p>
             </div> 
             <div class="right-col">
-                <h4>See more of her work on:</h4>
+                <h2>See more of her work on:</h2>
                 <div class="social-links">
                     <a href="https://instagram.com" target="_blank" rel="noopener"
                       aria-label="Connect with her on Instagram"><i class="fa-brands fa-instagram"></i></a>
