--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme color" content="#024500">
     
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Climate Circles</title>
+    <title>Climate Circles | Home</title>
 </head>
 <body>
     <header>
@@ -125,12 +125,12 @@
     <footer>
         <div class="footer-container">
             <div class="left-col">
-                <h4>Contact Info</h4>
+                <h2>Contact Info</h2>
                 <p>Email: alexandra.br@gmail.com</p>
                 <p>Telephone: 07432134322</p>
             </div> 
             <div class="right-col">
-                <h4>See more of her work on:</h4>
+                <h2>See more of her work on:</h2>
                 <div class="social-links">
                     <a href="https://instagram.com" target="_blank" rel="noopener"
                       aria-label="Connect with her on Instagram"><i class="fa-brands fa-instagram"></i></a>
