Fixed bug on the about page

--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
                     </p>
                     <div class="skills">
                         <a class="button" href="#workshop1">The Work That Reconnects</a>
-                        <a class="button" href="workshop2">CLimate Circles</a>
-                        <a class="button" href="workshop3">Forest Bathing</a>
+                        <a class="button" href="#workshop2">CLimate Circles</a>
+                        <a class="button" href="#workshop3">Forest Bathing</a>
                     </div>
                 </div>
             </div>
